# EGE

./: CMakeLists.txt  README.md  build.bat  build_fresh.bat  clean.cmake
Editor/: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/include/: EGE.hpp  EGE_component.hpp  EGE_gameobject.hpp  EGE_log.hpp  EGE_transform.hpp  EGE_vector2.hpp
Engine/src/: EGE_log.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
